--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -1,17 +1,13 @@
 -keep class com.bumptech.glide.load.engine.** { *; }
--dontwarn com.bumptech.glide.load.engine.*
+-dontwarn com.bumptech.glide.load.engine.**
 -keep class com.google.android.gms.internal.ads.** { *; }
--dontwarn com.google.android.gms.internal.ads.*
+-dontwarn com.google.android.gms.internal.ads.**
 -keep class com.google.android.gms.internal.stable.** { *; }
--dontwarn com.google.android.gms.internal.stable.*
+-dontwarn com.google.android.gms.internal.stable.**
 -keep class com.htetznaing.xgetter.** { *; }
--dontwarn com.htetznaing.xgetter.*
--keep class com.android.volley.** { *; }
--dontwarn com.android.volley.*
--keep class at.huber.youtubeExtractor.YouTubeExtractor {*; }
--dontwarn at.huber.youtubeExtractor.YouTubeExtractor
+-dontwarn com.htetznaing.xgetter.**
 -keep class org.jsoup.** { *; }
--dontwarn org.jsoup.*
+-dontwarn org.jsoup.**
 -keep class org.jsoup.nodes.Document { *; }
 -dontwarn org.jsoup.nodes.Document
 -keep class org.jsoup.nodes.Document { *; }
@@ -20,9 +16,25 @@
 -dontwarn org.jsoup.select.Elements
 -keep class org.jsoup.nodes.Element { *; }
 -dontwarn org.jsoup.nodes.Element
--keep class com.google.gson.Gson { *; }
--dontwarn com.google.gson.Gson
--keep class com.android.volley.toolbox.StringRequest { *; }
--dontwarn com.android.volley.toolbox.StringRequest
--keep class com.android.volley.Response { *; }
--dontwarn com.android.volley.Response
+
+-keepattributes Signature
+# For using GSON @Expose annotation
+-keepattributes *Annotation*
+
+# Gson specific classes
+-keep class sun.misc.Unsafe { *; }
+#-keep class com.google.gson.stream.** { *; }
+
+# Application classes that will be serialized/deserialized over Gson
+-keep class com.google.gson.examples.android.model.** { *; }
+
+# Prevent proguard from stripping interface information from     TypeAdapterFactory,
+# JsonSerializer, JsonDeserializer instances (so they can be used in @JsonAdapter)
+-keep class * implements com.google.gson.TypeAdapterFactory
+-keep class * implements com.google.gson.JsonSerializer
+-keep class * implements com.google.gson.JsonDeserializer
+
+-keep class com.android.volley.** { *; }
+-keep class org.apache.commons.logging.**
+-keepattributes *Annotation*
+-dontwarn org.apache.**
