refactor: Modify Proguard

--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -17,6 +17,12 @@
 -keep class org.jsoup.nodes.Element { *; }
 -dontwarn org.jsoup.nodes.Element
 
+-keep class android.support.v7.widget.FitWindowsFrameLayout { *; }
+-dontwarn android.support.v7.widget.FitWindowsFrameLayoutp
+
+-keep class android.support.design.** { *; }
+-dontwarn android.support.design.**
+
 -keepattributes Signature
 # For using GSON @Expose annotation
 -keepattributes *Annotation*
