--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -1,10 +1,15 @@
 -keep class com.bumptech.glide.load.engine.** { *; }
 -dontwarn com.bumptech.glide.load.engine.**
-
 -keep class com.google.android.gms.internal.ads.** { *; }
 -dontwarn com.google.android.gms.internal.ads.**
-
 -keep class com.google.android.gms.internal.stable.** { *; }
 -dontwarn com.google.android.gms.internal.stable.**
+-keep class android.support.v7.widget.** { *; }
+-dontwarn android.support.v7.widget.**
+-keep class android.support.design.widget.** { *; }
+-dontwarn android.support.design.widget.**
+-keep class android.support.design.internal.** { *; }
+-dontwarn android.support.design.internal.**
+
 
 
