--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -18,7 +18,7 @@
 -dontwarn org.jsoup.nodes.Element
 
 -keep class android.support.v7.widget.FitWindowsFrameLayout { *; }
--dontwarn android.support.v7.widget.FitWindowsFrameLayoutp
+-dontwarn android.support.v7.widget.FitWindowsFrameLayout
 
 -keep class android.support.design.** { *; }
 -dontwarn android.support.design.**
