--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -1,5 +1,5 @@
--keep class com.bumptech.glide.load.engine.** { *; }
--dontwarn com.bumptech.glide.load.engine.**
+-keep class com.bumptech.glide.** { *; }
+-dontwarn com.bumptech.glide.**
 -keep class com.google.android.gms.internal.ads.** { *; }
 -dontwarn com.google.android.gms.internal.ads.**
 -keep class com.google.android.gms.internal.stable.** { *; }
