refactor: Update Proguard.

--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -1,5 +1,12 @@
--keep class com.bumptech.glide.** { *; }
--dontwarn com.bumptech.glide.**
+-keep public class * implements com.bumptech.glide.module.GlideModule
+-keep public class * extends com.bumptech.glide.module.AppGlideModule
+-keep class com.bumptech.glide.gifdecoder. { *; }
+-dontwarn com.bumptech.glide.gifdecoder.**
+-keep public enum com.bumptech.glide.load.resource.bitmap.ImageHeaderParser$** {
+  **[] $VALUES;
+  public *;
+}
+-dontwarn com.bumptech.glide.load.resource.bitmap.VideoDecoder
 -keep class com.google.android.gms.internal.ads.** { *; }
 -dontwarn com.google.android.gms.internal.ads.**
 -keep class com.google.android.gms.internal.stable.** { *; }
