--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -11,20 +11,20 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="AsyncAwaitBestPractices" Version="3.0.0-pre2" />
-    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="3.0.0-pre2" />
+    <PackageReference Include="AsyncAwaitBestPractices" Version="3.0.0-pre4" />
+    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="3.0.0-pre4" />
     <PackageReference Include="Realm" Version="3.4.0" />
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
-    <PackageReference Include="Splat" Version="8.0.1" />
+    <PackageReference Include="Splat" Version="8.0.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0-pre" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.0-pre" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.581479" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.1.0.581479" />
-    <PackageReference Include="Xamarin.HotReload" Version="1.2.9" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.608146-pre1" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.2.0.608146-pre1" />
+    <PackageReference Include="Xamarin.HotReload" Version="1.4.13" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
 
