--- a/SSFR_Movies.iOS/packages.config
+++ b/SSFR_Movies.iOS/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Xam.Plugins.Settings" version="4.0.0.10-beta" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="4.2.0.608146-pre1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms.Visual.Material" version="4.2.0.608146-pre1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="4.2.0.618605-pre2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.Visual.Material" version="4.1.0.618606" targetFramework="xamarinios10" />
   <package id="Xamarin.iOS.MaterialComponents" version="72.2.0.1" targetFramework="xamarinios10" />
 </packages>
