--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -24,8 +24,8 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0-pre" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.618605-pre2" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.1.0.618606" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.673161-pre3" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.2.0.673161-pre3" />
     <PackageReference Include="Xamarin.HotReload" Version="1.4.19" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
