--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -11,21 +11,21 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="AsyncAwaitBestPractices" Version="3.0.0" />
-    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="3.0.0" />
-    <PackageReference Include="Realm" Version="4.0.1" />
-    <PackageReference Include="Realm.Fody" Version="4.0.1">
+    <PackageReference Include="AsyncAwaitBestPractices" Version="3.1.0-pre5" />
+    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="3.1.0-pre5" />
+    <PackageReference Include="Realm" Version="4.1.0" />
+    <PackageReference Include="Realm.Fody" Version="4.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
-    <PackageReference Include="Splat" Version="8.1.1" />
+    <PackageReference Include="Splat" Version="8.2.4" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0-pre" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.673161-pre3" />
-    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.2.0.673161-pre3" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.HotReload" Version="1.4.19" />
     <PackageReference Include="XF.Material" Version="1.4.1.3" />
   </ItemGroup>
