Refactor: Produce Reference Assembly, to speed up the project build.

--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>SSFR_Movies</AssemblyName>
     <RootNamespace>SSFR_Movies</RootNamespace>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
   </PropertyGroup>
   
   <PropertyGroup>
