--- a/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
+++ b/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.SergioJoelFerreras.SSFR_Movies" android:installLocation="auto" android:versionName="2.0.4" android:versionCode="16">
-	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.SergioJoelFerreras.SSFR_Movies" android:installLocation="internalOnly" android:versionName="2.0.4" android:versionCode="16">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
