Refactor: Update Proguard

--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -16,3 +16,6 @@
 
 -keep class android.support.design.** { *; }
 -dontwarn android.support.design.**
+
+-keep class android.support.customtabs.** { *; }
+-dontwarn android.support.customtabs.**
