--- a/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
+++ b/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.SergioJoelFerreras.SSFR_Movies" android:installLocation="internalOnly" android:versionName="2.0.4" android:versionCode="16">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:extractNativeLibs="true" android:largeHeap="true" android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon1">
-		<activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
-	</application>
+	<application android:extractNativeLibs="true" android:largeHeap="true" android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon1"></application>
 </manifest>
