--- a/SSFR_Movies/SSFR_Movies.iOS/SSFR_Movies.iOS.csproj
+++ b/SSFR_Movies/SSFR_Movies.iOS/SSFR_Movies.iOS.csproj
@@ -28,6 +28,7 @@
         <CodesignKey>Apple Development: sergiojoel9877@hotmail.com (BYVXTV5CG2)</CodesignKey>
         <CodesignProvision>iOS Team Provisioning Profile: com.sergiojoelferreras.SSFR-Movies.iOS</CodesignProvision>
         <MtouchSdkVersion>13.2</MtouchSdkVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
         <DebugType>none</DebugType>
@@ -37,6 +38,10 @@
         <WarningLevel>4</WarningLevel>
         <MtouchLink>None</MtouchLink>
         <MtouchArch>x86_64</MtouchArch>
+        <IOSDebuggerPort></IOSDebuggerPort>
+        <MtouchI18n></MtouchI18n>
+        <LangVersion>latest</LangVersion>
+        <MtouchI18n></MtouchI18n>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
         <DebugSymbols>true</DebugSymbols>
@@ -53,6 +58,7 @@
         <CodesignProvision>iOS Team Provisioning Profile: com.sergiojoelferreras.SSFR-Movies.iOS</CodesignProvision>
         <MtouchLink>None</MtouchLink>
         <MtouchSdkVersion>13.1</MtouchSdkVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -63,6 +69,8 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <MtouchArch>ARM64</MtouchArch>
         <CodesignKey>iPhone Developer</CodesignKey>
+        <MtouchLink>SdkOnly</MtouchLink>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System" />
@@ -73,12 +81,11 @@
         <Reference Include="System.Numerics.Vectors" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
       <PackageReference Include="Realm">
-        <Version>4.1.0</Version>
+        <Version>10.1.4</Version>
       </PackageReference>
       <PackageReference Include="Splat">
-        <Version>9.2.11</Version>
+        <Version>11.1.1</Version>
       </PackageReference>
       <PackageReference Include="Xamarin.FFImageLoading">
         <Version>2.4.11.982</Version>
@@ -89,22 +96,28 @@
       <PackageReference Include="Xam.Plugins.Settings">
         <Version>4.0.0.10-beta</Version>
       </PackageReference>
-      <PackageReference Include="Xamarin.HotReload">
-        <Version>1.4.19</Version>
-      </PackageReference>
       <PackageReference Include="Realm.Fody">
-        <Version>4.1.0</Version>
+        <Version>10.1.4</Version>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="XF.Material">
-        <Version>1.5.8</Version>
+        <Version>1.7.8</Version>
       </PackageReference>
       <PackageReference Include="Xamarin.Forms">
-        <Version>4.5.0.187-pre2</Version>
+        <Version>5.0.0.2012</Version>
       </PackageReference>
       <PackageReference Include="Xamarin.Forms.Visual.Material">
-        <Version>4.5.0.187-pre2</Version>
+        <Version>5.0.0.2012</Version>
+      </PackageReference>
+      <PackageReference Include="Xamarin.CommunityToolkit">
+        <Version>1.2.0-pre2</Version>
+      </PackageReference>
+      <PackageReference Include="Xamarin.CommunityToolkit.Markup">
+        <Version>1.2.0-pre2</Version>
+      </PackageReference>
+      <PackageReference Include="Xamarin.Essentials">
+        <Version>1.6.1</Version>
       </PackageReference>
     </ItemGroup>
     <ItemGroup>
